# GPT-NL-Energy-Estimation-

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
models/: MODELS.md  gbm_energy.joblib  gbm_time.joblib  linear_energy.joblib  linear_time.joblib  mlp_energy.joblib  mlp_time.joblib  ridge_energy.joblib  ridge_time.joblib
paper/: extra_pkgs.tex  main.tex  references.bib  sustainlp2026_paper.docx  thesis.tex
paper/code/: dedup_analysis.py
paper/data/: dedup_ear_harvested.csv  dedup_ear_raw.csv  measurements.csv  measurements_generalized.csv  measurements_harvest_0626.csv  measurements_raw.csv  measurements_raw_generalized.csv  measurements_raw_harvest_0626.csv  measurements_shared_multicorpus.csv  ols_fits.json  ols_fits_with_dedup.json  validation.csv
scripts/: fix_escaping.py  fix_thesis.py  train_all.py  upload_to_hf.py
src/gptnl_energy/: __init__.py  data.py  ekf.py  forecast.py  monitor.py
src/gptnl_energy/cli/: main.py
src/gptnl_energy/models/: __init__.py  torch_models.py
